--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-formidable": "^1.2.0",
     "mongoose": "^5.13.2",
     "nodemon": "^2.0.9",
+    "stripe": "^8.167.0",
     "uid2": "0.0.3"
   }
 }
